# intelligent-web-search

./: Containerfile  DESIGN.md  Dockerfile  README.md  TESTING.md  pyproject.toml
examples/: openwebui-mcp-config.json
scripts/: install-playwright.sh  run-http.sh  run-stdio.sh
src/intelligent_web_search/: __init__.py  classifier.py  config.py  extract.py  fetch_complex.py  fetch_simple.py  heuristics.py  models.py  orchestrator.py  search.py  server.py
